--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: The Merry Christmas of the Old Woman who Lived in a Shoe
 url: http://www.gutenberg.org/ebooks/48832
